Fix shopping bag page layout problem

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -94,7 +94,7 @@ a.category-badge > span.badge:hover {
     color: white;
 }
 
-.btn-blue:hover {
+.btn:hover {
     font-weight: bold;
 }
 
